--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "format": "prettier --write src/**/*.js"
   },
   "dependencies": {
+    "axios": "^1.8.2",
     "discord.js": "^14.18.0",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3",
     "eslint": "^8.57.0",
+    "nodemon": "^3.0.3",
     "prettier": "^3.2.5"
   }
 }
